# clip-as-service-rs

./: .gitignore  Cargo.toml  README.md  build.rs  rust-toolchain.toml
.github/workflows/: build.yml
deploy/SELinux/: CaaS.fc  CaaS.if  CaaS.sh  CaaS.te
pb/encoder/: encoder.proto
src/: server.rs
src/utils/: mod.rs  unsafe_sync.rs
